hphp/test/zend/good/ext/intl/tests/calendar_getDayOfWeekType_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('intl'))
    die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '4.4') < 0 || version_compare(INTL_ICU_VERSION, '52.1') >= 0)
    die('skip for ICU >= 4.4 and ICU < 52.1');
}
