hphp/test/zend/bad/ext/intl/tests/calendar_getKeywordValuesForLocale_error.php.skipif
<?php
if (!extension_loaded('intl'))
	die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '4.2') < 0)
	die('skip for ICU 4.2+');